# apr-event-bridge

./: .gitignore  .gitmodules  AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  README.threads.md  aclocal.m4  autogen.sh  configure.ac  libtool
include/: .gitignore  compat.h  dispatch.h  event_types.h  internal.h  libaeb.h  libaeb_assert.h  libaeb_config.h.in  libaeb_event_info.h  libaeb_event_types.h  libaeb_version.h  libaeb_version.h.in  util.h  weakref.h
lib/: apr_array_clear.c  apr_table_clone.c  stub.c
libs/: .gitignore  configure-libs.in  libevent-2.0.21-stable.automake.patch
src/: apr_event_bridge.pc.in  base.c  brigade.c  dispatch.c  event.c  event_info.c  loop.c  mc.c  static.c  test.c  timers.c  util.c  weakref.c
