ACLOCAL_AMFLAGS = -I build
AM_CPPFLAGS = @LIBAEB_EXTRA_CPPFLAGS@
AM_CFLAGS = $(DEBUG_CFLAGS) @PLATFORM_CFLAGS@ -Wall
LIBAEB_ABI_MAJOR = @LIBAEB_ABI_MAJOR@
LIBAEB_ABI_COMPAT = @LIBAEB_ABI_COMPAT@
LIBAEB_API_VERSION = @LIBAEB_API_VERSION@
LIBAEB_REVISION = @LIBAEB_REVISION@

EXTRA_DIST = LICENSE build/find_apu.m4 build/find_apr.m4

SUBDIRS = .

if INSTALL_PKGCONFIG
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = src/apr_event_bridge.pc
endif

